Update first version

--- a/notebooks/week7_implementation1.ipynb
+++ b/notebooks/week7_implementation1.ipynb
@@ -2057,10 +2057,10 @@
         "    ]\n",
         "\n",
         "    longer_sample_prompts = [\n",
-        "        \"As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars. With a deep breath, he took the first step down the winding path, knowing that\",\n",
-        "        \"In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers, left Earth's orbit and set a course for the distant exoplanet, Novaterra.\",\n",
-        "        \"The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation, she had finally synthesized what could be the cure to one of the world's deadliest diseases.\",\n",
-        "        \"The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear. On the mahogany desk lay an envelope, its wax seal bearing the insignia of a\"\n",
+        "        \"As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars\",\n",
+        "        \"In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers\",\n",
+        "        \"The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation\",\n",
+        "        \"The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear\"\n",
         "    ]\n",
         "\n",
         "    for prompt in sample_prompts:\n",
@@ -2084,9 +2084,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6ac537c-28d9-4a09-a55b-1eee8924787d"
+        "outputId": "6ed59f33-58fa-41e9-b1d7-991189dab197"
       },
-      "execution_count": 85,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -2094,48 +2094,52 @@
           "text": [
             "\n",
             "Prompt: Hello, my name is\n",
-            "Reference: Hello, my name is David. I'm the manager of a boutique in New York called The Body Shop (my realtor and personal trainer).\n",
-            "I have taken care to use your photos here with our permission as we do not accept money from any\n",
-            "Custom:    Hello, my name is given as a nod to the former US Capitol building. In addition, in 2013 there will have been an early warning from its completion of one blockage near Halsea , where it was completed and opened shortly after being built\n",
+            "Reference: Hello, my name is Gizmo. I'm a member of the team at Microsoft Studios and have been working on Fallout 3 since 2010.\"\n",
+            "\"I like to work with new players in an interesting way,\" says Kotaku's James Hark\n",
+            "Custom:    Hello, my name is also true.\n",
+            " \n",
+            "\n",
+            "( 'The only one who died in the movie as a main character after he was being killed by his wife Alton Brown . The following incident , it turned that an episode of their decision to\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
             "Prompt: The meaning of life is\n",
-            "Reference: The meaning of life is the most fundamental one. We are all subject to a process, and each has its own set of characteristics that define it – whether we agree with their ideas about what human beings should be like in general or not depending on those\n",
-            "Custom:    The meaning of life is important to the success or prosperity for our society, including both men and women's lives. While these roles are more attractive in their daily tasks . This may well be reflected by a culture that reflects its very limited resources such as\n",
+            "Reference: The meaning of life is an idea that will become more and less common to believers over time, as a result.\n",
+            "Custom:    The meaning of life is to be able, especially in the case where a human will take on their own. It was from what they are not part of an organized movement or subject for humans (which only one ) . The purpose could exist , but\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
             "Prompt: In a shocking turn of events,\n",
-            "Reference: In a shocking turn of events, one member allegedly fired two shots at the man in that situation on Jan. 10 — but was caught off guard when he confronted him with his own firearm and threatened to kill himself if you did not obey orders from another\n",
-            "Custom:    In a shocking turn of events, at least one time in April.\n",
-            "We took the power from Bambar that they had become state-dependent and did not have any significant changes to date after it could be made through some years later when their\n",
+            "Reference: In a shocking turn of events, the jury found that Walker hadn't deliberately killed his wife and children. The judge said he had been \"unhinged\" by what unfolded since last November when an attempted robbery at her home was thwarted in court –\n",
+            "Custom:    In a shocking turn of events, the Department decided to hold some kind with it. It was in fact made out by another class (for ). In this case , they were forced upon entering into its facilities for possible alternative forms . They did not even\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
             "Prompt: The future of artificial intelligence\n",
-            "Reference: The future of artificial intelligence is already changing rapidly, and the technology may be far more advanced than we think. More generally speaking: If one's goal for tomorrow was to design intelligent machines that could perform mundane tasks without being stuck in a cluttered world\n",
-            "Custom:    The future of artificial intelligence, as a measure against the state's success. (notwithstanding that they are not yet in control) - and to do everything else: it is an important factor for understanding which can be achieved when considering how much more detailed\n",
+            "Reference: The future of artificial intelligence in the human workplace is uncertain, with advances on many fronts. There are technological trends that would lead to machine learning being implemented by every level of government and industry regardless if we adopt it or not.\"\n",
+            "\"However,\" he\n",
+            "Custom:    The future of artificial intelligence, like the real-type that is a great challenge. If you can find some degree to distinguish between different types and their respective groups under consideration in other areas such as human rights activists (often ) who are required ). This\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
             "\n",
-            "Prompt: As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars. With a deep breath, he took the first step down the winding path, knowing that\n",
-            "Reference: As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars. With a deep breath, he took the first step down the winding path, knowing that there were still others waiting\n",
-            "Custom:    As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars. With a deep breath, he took the first step down the winding path, knowing that there was to take place\n",
+            "Prompt: As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars\n",
+            "Reference: As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars.\n",
+            "\"There!\" shouted a human voice from far away in front her as she rushed by and stopped to pick\n",
+            "Custom:    As the sun set behind the towering mountains, the weary traveler finally caught sight of the distant village, its warm lights flickering like tiny stars. It is a mystery and has since it's history . With one notable landmarks in that are often having been placed\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
-            "Prompt: In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers, left Earth's orbit and set a course for the distant exoplanet, Novaterra.\n",
-            "Reference: In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers, left Earth's orbit and set a course for the distant exoplanet, Novaterra.\n",
-            "This mission\n",
-            "Custom:    In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers, left Earth's orbit and set a course for the distant exoplanet, Novaterra. On this day\n",
+            "Prompt: In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers\n",
+            "Reference: In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers—including some whose lives seemed hopeless before their presence was discovered—was built in 1767 on Yucatan Island\n",
+            "Custom:    In the year 2157, humanity had finally perfected interstellar travel. The first colony ship, brimming with hope and thousands of eager settlers or two ships in three-sealed cargo containers , which would be assembled at least 50 km from each side by\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
-            "Prompt: The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation, she had finally synthesized what could be the cure to one of the world's deadliest diseases.\n",
-            "Reference: The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation, she had finally synthesized what could be the cure to one of the world's deadliest diseases.\n",
-            "\"Do you remember anything\n",
-            "Custom:    The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation, she had finally synthesized what could be the cure to one of the world's deadliest diseases. Thus it was based in an\n",
+            "Prompt: The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation\n",
+            "Reference: The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation and research she had finally arrived to a conclusion when he saw him: \"Here we are.\" The professor nodded in approval as another\n",
+            "Custom:    The scientist stared at the glowing vial on the laboratory table, her fingers trembling with anticipation. After years of relentless experimentation , and we can do a few months into how to detect any possible solutions for new recruits .\n",
+            "     The results were not always\n",
             "--------------------------------------------------------------------------------\n",
             "\n",
-            "Prompt: The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear. On the mahogany desk lay an envelope, its wax seal bearing the insignia of a\n",
-            "Reference: The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear. On the mahogany desk lay an envelope, its wax seal bearing the insignia of a group that had\n",
-            "Custom:    The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear. On the mahogany desk lay an envelope, its wax seal bearing the insignia of a large wooden box\n",
+            "Prompt: The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear\n",
+            "Reference: The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear.\n",
+            "\"What is it?\" She asked softly in her head. It was dark gray as light from an empty\n",
+            "Custom:    The detective pushed open the heavy oak door, stepping into a room thick with the scent of old books and something more sinister—fear. The first to be found in his garden while visiting guests or on October 9 . As soon after receiving instruction from\n",
             "--------------------------------------------------------------------------------\n"
           ]
         }
